# opensn0w

./: .gitignore  .gitmodules  8900.c  Makefile  Makefile.am  README  README.md  abstractfile.c  autogen.sh  base64.c  bsdiff.c  btree.c  catalog.c  cert.h  common.ver  config.apple.llvm.h  config.h  config.h.in  config.win32.msvc.h  configure  configure.ac  crc.h  crtsup.c  darwin_usb.h  ddkbld  debug.h  dirs  extents.c  fastunicodecompare.c  flatfile.c  greenpois0n.h  hfs.c  hfscompress.c  hfslib.c  iPhone3,1_Telluride9A334_5.0.plist  iPod4,1_HoodooVail9B5127c_5.1b2.plist  iPod4,1_Telluride9A334_5.0.plist  ibootim.c  img2.c  img3.c  (+32 more)
Keys/: AppleTV2,1_4.1_8M89.plist  AppleTV2,1_4.2.1_8C154.plist  AppleTV2,1_4.2_8C150.plist  AppleTV2,1_4.3_8F191m.plist  AppleTV2,1_4.3_8F202.plist  AppleTV2,1_4.3_8F305.plist  AppleTV2,1_4.3_8F455.plist  AppleTV2,1_4.3_8F5148c.plist  AppleTV2,1_5.0.1_9A405l.plist  AppleTV2,1_5.0.1_9A406a.plist  AppleTV2,1_5.0_9A334v.plist  AppleTV2,1_5.0_9A335a.plist  AppleTV2,1_5.0_9A336a.plist  AppleTV2,1_5.1.1_9B206f.plist  AppleTV2,1_5.1_9B179b.plist  Template.plist  iPad1,1_3.2.1_7B405.plist  iPad1,1_3.2.2_7B500.plist  iPad1,1_3.2_7B367.plist  iPad1,1_4.2.1_8C148.plist  iPad1,1_4.2_8C134.plist  iPad1,1_4.2_8C134b.plist  iPad1,1_4.2_8C5115c.plist  iPad1,1_4.3.1_8G4.plist  iPad1,1_4.3.2_8H7.plist  iPad1,1_4.3.3_8J3.plist  iPad1,1_4.3.4_8K2.plist  iPad1,1_4.3.5_8L1.plist  iPad1,1_4.3_8F190.plist  iPad1,1_4.3_8F5148b.plist  iPad1,1_5.0.1_9A405.plist  iPad1,1_5.0_9A334.plist  iPad1,1_5.1.1_9B206.plist  iPad1,1_9A334.plist  iPad1,1_9A405.plist  iPad2,1_4.3.1_8G4.plist  iPad2,1_4.3.2_8H7.plist  iPad2,1_4.3.3_8J2.plist  iPad2,1_4.3.4_8K2.plist  iPad2,1_4.3.5_8L1.plist  (+167 more)
OSX/: VLOAppDelegate.h  VLOAppDelegate.m  main.m  opensn0w-Info.plist  opensn0w-Prefix.pch
OSX/en.lproj/: Credits.rtf  MainMenu.xib
autom4te.cache/: output.0  traces.0
ddkbld/: psapi.lib  unistd.h
ddkbld/curl/: easy.h
ddkbld_cli/: getopt.h  sources  zconf.h  zlib.lib
ddkbld_gui/: curl.lib  inttypes.h  libgen.h  sources  stdbool.h  stdint.h
ddkbld_gui/curl/: curl.h
ddkbld_gui/openssl/: aes.h  sha.h
ipsw_grabber/: download.sh
jailbreak_ramdisk_utils/: Makefile  README
jailbreak_ramdisk_utils/launchd/: Makefile  crtsup.c  launchd  main.c
jailbreak_ramdisk_utils/make_ramdisk/: Makefile  README
jailbreak_ramdisk_utils/make_ramdisk/img3fs/: Makefile
jailbreak_ramdisk_utils/make_ramdisk/ramdisk/: Makefile  build_ramdisk.sh  example
jailbreak_ramdisk_utils/restored/: IOUSBDeviceControllerLib.h  Makefile  abstractfile.c  crtsup.c  main.c  plist.c  untether.c
jailbreak_ramdisk_utils/untether_binaries/common/9A405/: launchd.conf
jailbreak_ramdisk_utils/untether_binaries/iPad1,1/9A405/: payload
jailbreak_ramdisk_utils/untether_binaries/iPhone2,1/9A405/: payload
jailbreak_ramdisk_utils/untether_binaries/iPhone3,1/9A405/: payload
jailbreak_ramdisk_utils/untether_binaries/iPhone3,3/9A405/: payload
jailbreak_ramdisk_utils/untether_binaries/iPod3,1/9A405/: payload
jailbreak_ramdisk_utils/untether_binaries/iPod4,1/9A405/: payload
jailbreak_ramdisk_utils/untether_tar/: Makefile  create.sh
libirecovery/: libirecovery.c
libirecovery/include/: libirecovery.h
msvc/: opensn0w.sln  opensn0w.vcxproj  opensn0w.vcxproj.filters
opensn0w.xcodeproj/: project.pbxproj
opensn0w.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
opensn0w.xcodeproj/project.xcworkspace/xcuserdata/rms.xcuserdatad/: UserInterfaceState.xcuserstate
opensn0w.xcodeproj/xcuserdata/rms.xcuserdatad/xcschemes/: opensn0w.xcscheme  xcschememanagement.plist
patches/n72ap.8C148/: iBEC.n72ap.RELEASE.dfu.patch  kernelcache.release.n72.patch
xpwntool/: common.h
xpwntool/xpwn/: libxpwn.h
